# pq-cli

./: .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  LICENSE.md  README.md  docker-compose.yml  makefile  pyproject.toml  setup.py
pqcli/: __main__.py  config.py  game_state.py  lingo.py  mechanic.py  random.py  roster.py  sim.py
pqcli/ui/: __init__.py  base.py  button.py  confirm_dialog.py  custom_button.py  custom_line_box.py  custom_list_box.py  custom_progress_bar.py  data_table.py  double_line_box.py  exit_view.py  game_view.py  layout.py  line_box.py  new_game_view.py  read_only_check_box.py  roster_view.py  scrollable.py
pqcli/ui/basic/: __init__.py
pqcli/ui/curses/: __init__.py  colors.py  event_handler.py  util.py
pqcli/ui/curses/views/: __init__.py  base_view.py  choose_character_view.py  confirm_view.py  create_character_view.py  menu_view.py  roster_view.py
pqcli/ui/curses/views/create_character_view/: __init__.py  choose_character_class_view.py  choose_character_name_view.py  choose_character_race_view.py  choose_character_stats_view.py
pqcli/ui/curses/views/game_view/: __init__.py  character_sheet_window.py  equipment_window.py  focusable.py  inventory_window.py  plot_window.py  progress_bar_window.py  quest_book_window.py  spell_book_window.py  task_progress_window.py
pqcli/ui/curses/widgets/: __init__.py  base.py  data_table.py  focusable.py  label.py  list_box.py  menu.py  progress_bar.py  scrollable.py
pqcli/ui/urwid/: __init__.py  confirm_dialog.py  custom_line_box.py  custom_progress_bar.py  data_table.py  double_line_box.py  game_view.py  new_game_view.py  roster_view.py
pqcli/ui/urwid/views/: __init__.py  confirm_view.py  game_view.py  new_game_view.py  roster_view.py
pqcli/ui/urwid/widgets/: __init__.py  custom_button.py  data_table.py  double_line_box.py  scrollable.py
